代码简化
Signed-off-by: 胡金栋 <jameshopbourn@gmail.com>